# buisenes_control_system

./: .gitignore  Readme.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_19_1540-aa903d560cfb_initial.py  2024_08_25_1703-adc9006420e6_update_models.py  2024_08_30_2305-d1d765bf812b_add_models_task_position_struct_adm.py  2024_09_02_1647-96d88e78c8a7_delete.py  2024_09_03_1440-57675e7ca4c2_add_idx_to_m2m_struct_adm_positions.py
src/: __main__.py  config.py  main.py  metadata.py
src/api/: __init__.py  dependencies.py
src/api/account/: router.py  service.py
src/api/auth/: router.py  service.py
src/api/company/: router.py  service.py
src/api/invite/: service.py
src/api/positions/: router.py  service.py
src/api/struct_adm/: router.py  service.py
src/api/tasks/: router.py  service.py
src/api/users/: router.py  service.py
src/database/: db.py
src/middleware/: auth.py
src/models/: __init__.py  account.py  base.py  company.py  invite.py  position.py  secret.py  struct_adm.py  struct_adm_positions.py  task.py  user.py  user_tasks_associations.py  users_positions.py
src/repositories/: __init__.py  account.py  company.py  invite.py  position.py  secret.py  struct_adm.py  struct_adm_positions.py  task.py  user.py
src/schemas/: account.py  auth.py  invite.py  position.py  secret.py  struc_adm.py  task.py  user.py
src/utils/: base_service.py  custom_types.py  repository.py  send_email.py  unit_of_work.py
src/utils/auth/: jwt.py  password.py
